Button styles Sidebar styles, made it fixed Added scrollbar styling

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -5,6 +5,7 @@
 body {
   background-color: $bgcolor;
   font-family: $Montserrat;
+  box-sizing: border-box;
 }
 ul,
 li {
@@ -20,6 +21,37 @@ button {
   border: none;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 main {
-  @include flex(row, center, flex-start);
+  @include flex(row, flex-end, flex-start);
+}
+
+//SCROLLBAR
+
+::-webkit-scrollbar {
+  width: 11px;
+  height: 11px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: $dexcolor;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-track {
+  background: $lightgray;
+  border: 0px none #ffffff;
+  border-radius: 0px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
