--- a/client/src/styles/CharacterRow.scss
+++ b/client/src/styles/CharacterRow.scss
@@ -34,19 +34,19 @@
       .unit-class {
         font-size: 13px;
       }
-      .strcolor {
+      .STRcolor {
         color: $strcolor;
       }
-      .dexcolor {
+      .DEXcolor {
         color: $dexcolor;
       }
-      .qckcolor {
+      .QCKcolor {
         color: $qckcolor;
       }
-      .psycolor {
+      .PSYcolor {
         color: $psycolor;
       }
-      .intcolor {
+      .INTcolor {
         color: $intcolor;
       }
     }
